test/binary/bad-linking-metadata.txt
;;; TOOL: run-gen-wasm-interp
;;; ERROR: 1
magic
version
section("linking") {
  metadata_version[99]
}
(;; STDERR ;;;
out/test/binary/bad-linking-metadata/bad-linking-metadata.wasm:0000013: error: invalid linking metadata version: 99
;;; STDERR ;;)
